--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -25,7 +25,8 @@ body, button, input {
 #mealsButton button:hover,
 #statisticsButton button:hover,
 #referenceNutrientsButton button:hover,
-.navigationButton:hover:not(.disabled){
+.navigationButton:hover:not(.disabled),
+.pagerButton:hover:not(.disabled) {
     background-color: rgb(100, 149, 237);
 }
 
@@ -137,9 +138,9 @@ select {
 .confirmButton:disabled,
 .cancelButton:disabled,
 .selectButton:disabled,
-.navigationButton:disabled {
+.navigationButton:disabled,
+.pagerButton:disabled {
     background-color: gray;
-
     cursor: not-allowed;
 }
 
@@ -366,7 +367,8 @@ th {
     font-weight: lighter;
 }
 
-.navigationButton {
+.navigationButton,
+.pagerButton {
     color: rgb(250, 250, 250);
     background-color: rgb(66, 100, 160);
     text-align: center;
@@ -380,4 +382,23 @@ th {
     width: 100%;
     margin-bottom: 15px;
     border: none;
+}
+
+.ellipsis {
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    word-wrap: break-word;
+    white-space: break-spaces;
+    width: 100%;
+    margin-bottom: 15px;
+    border: none;
+    background-color: white;
+}
+
+.pagination table {
+    margin-top: 15px;
+    table-layout: fixed;
 }
