--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,11 +2,7 @@ body, button, input {
     font-family: Arial, sans-serif;
 }
 
-#recipesButton,
-#mealsButton,
-#statisticsButton,
-#referenceMapsButton,
-#userSettingsButton {
+.overviewButton {
     border: none;
     text-align: center;
     padding: 5%;
@@ -22,11 +18,7 @@ body, button, input {
     background-color: rgb(66, 100, 160);
 }
 
-#recipesButton:hover,
-#mealsButton:hover,
-#statisticsButton:hover,
-#referenceMapsButton:hover,
-#userSettingsButton:hover,
+.overviewButton:hover,
 .navigationButton:hover:not(.disabled),
 .pagerButton:hover:not(.disabled) {
     background-color: rgb(100, 149, 237);
@@ -57,7 +49,8 @@ body, button, input {
 #mealEntryEditor table:not(.info),
 #referenceEntryEditor table,
 #statistics table,
-#navigation table {
+#navigation table,
+#complexFoodEditor table {
     border-spacing: 0;
     width: 100%;
     table-layout: fixed;
@@ -93,7 +86,8 @@ body, button, input {
 #ingredientEditor thead th,
 #mealEntryEditor thead th,
 #referenceEntryEditor thead th,
-#statistics thead th {
+#statistics thead th,
+#complexFoodEditor thead th {
     font-size: larger;
     font-weight: lighter;
     font-style: italic;
@@ -105,9 +99,11 @@ body, button, input {
 #ingredientEditor thead th:not(.numberLabel),
 #mealEntryEditor thead th:not(.numberLabel),
 #referenceEntryEditor thead th:not(.numberLabel),
-#statistics thead th:not(.numberLabel) {
+#statistics thead th:not(.numberLabel),
+#complexFoodEditor thead th:not(.numberLabel) {
     text-align: left;
 }
+
 
 .editButton,
 .editorButton,
@@ -115,7 +111,8 @@ body, button, input {
 .confirmButton,
 .cancelButton,
 .selectButton,
-.logoutButton {
+.logoutButton,
+.alternativeButton {
     color: rgb(250, 250, 250);
     border: none;
     text-align: center;
@@ -133,6 +130,10 @@ body, button, input {
     white-space: break-spaces;
 }
 
+.alternativeButton {
+    width: auto;
+}
+
 select {
     white-space: nowrap;
     overflow: hidden;
@@ -145,7 +146,8 @@ select {
 .cancelButton:disabled,
 .selectButton:disabled,
 .navigationButton:disabled,
-.pagerButton:disabled {
+.pagerButton:disabled,
+.alternativeButton:disabled {
     background-color: gray;
     cursor: not-allowed;
 }
@@ -313,6 +315,14 @@ th {
 .selectButton:hover:not(.disabled),
 .confirmButton:hover:enabled {
     background-color: rgb(70, 240, 70);
+}
+
+.alternativeButton {
+    background-color: rgb(25, 206, 235);
+}
+
+.alternativeButton:hover:enabled {
+    background-color: rgb(40, 230, 250);
 }
 
 #addRecipeView input,
