Add search fields (#45)

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -325,13 +325,13 @@ th {
     background-color: rgb(40, 230, 250);
 }
 
-#addRecipeView input,
-#addMealView input,
-#addReferenceMapView input,
+#addRecipeView input:not(.searchField),
+#addMealView input:not(.searchField),
+#addReferenceMapView input:not(.searchField),
 #ingredientEditor input:not(.searchField),
 #mealEntryEditor input:not(.searchField),
 #referenceEntryEditor input:not(.searchField),
-#statistics input {
+#statistics input:not(.searchField) {
     box-sizing: border-box;
     width: 100%;
     font-size: larger;
