#41 - Differentiate missing values from proper zeroes (#47)

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -459,3 +459,7 @@ th {
     margin-top: 15px;
     table-layout: fixed;
 }
+
+.incomplete {
+    text-decoration: underline dashed rgb(218, 112, 214);
+}
