--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -24,6 +24,10 @@ body, button, input {
     background-color: rgb(100, 149, 237);
 }
 
+.nutrientsButton:hover {
+    background-color: rgb(170, 102, 204);
+}
+
 .addButton {
     background-color: rgb(50, 180, 50);
     color: rgb(250, 250, 250);
@@ -404,9 +408,9 @@ th {
 }
 
 .navigationButton,
-.pagerButton {
+.pagerButton,
+.nutrientsButton {
     color: rgb(250, 250, 250);
-    background-color: rgb(66, 100, 160);
     text-align: center;
     border-radius: 5px;
     text-decoration: none;
@@ -418,6 +422,15 @@ th {
     width: 100%;
     margin-bottom: 15px;
     border: none;
+}
+
+.navigationButton,
+.pagerButton {
+    background-color: rgb(66, 100, 160);
+}
+
+.nutrientsButton {
+    background-color: rgb(153, 51, 204);
 }
 
 .ellipsis {
