--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -189,14 +189,31 @@ th {
     width: 10%;
 }
 
-#mealEntryEditor th:first-child,
-#mealEntryEditor th:nth-child(2) {
+#mealEntryEditor th:first-child:not(.recipeEditTable),
+#mealEntryEditor th:nth-child(2):not(.recipeEditTable) {
     width: 30%;
 }
 
-#mealEntryEditor th:nth-child(3) {
+#mealEntryEditor th:nth-child(3):not(.recipeEditTable) {
     width: 10%;
 }
+
+#mealEntryEditor .recipeEditTable th:first-child {
+    width: 25%
+}
+
+#mealEntryEditor .recipeEditTable th:nth-child(2) {
+    width: 25%
+}
+
+#mealEntryEditor .recipeEditTable th:nth-child(3) {
+    width: 15%
+}
+
+#mealEntryEditor .recipeEditTable th:nth-child(4) {
+    width: 10%
+}
+
 
 #referenceEntryEditor th:first-child {
     width: 50%;
