--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -25,6 +25,14 @@ body, button, input {
     background-color: rgb(100, 149, 237);
 }
 
+.menuButton {
+    background-color: rgb(23, 162, 184);
+}
+
+.menuButton:hover {
+    background-color: rgb(40, 180, 200);
+}
+
 .nutrientsButton:hover {
     background-color: rgb(170, 102, 204);
 }
@@ -97,6 +105,7 @@ body, button, input {
 .logoutButton,
 .alternativeButton,
 .nutrientsButton,
+.menuButton,
 .errorButton {
     color: rgb(250, 250, 250);
     border: none;
@@ -159,15 +168,15 @@ th {
 }
 
 #addRecipeView th:first-child {
-    width: 20%;
+    width: 40%;
 }
 
 #addRecipeView th:nth-child(2) {
-    width: 15%;
+    width: 30%;
 }
 
 #addRecipeView th:nth-child(3) {
-    width: 10%;
+    width: 12%;
 }
 
 #addRecipeView th:nth-child(4) {
