--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -129,7 +129,7 @@ body, button, input {
     width: auto;
 }
 
-#addRecipeView table .toggle {
+table .toggle {
     width: 35px;
 }
 
@@ -171,15 +171,18 @@ th {
     background: white;
 }
 
-#addRecipeView th:first-child {
+#addRecipeView th:first-child,
+#ingredientEditor .recipeEditTable th:first-child {
     width: 40%;
 }
 
-#addRecipeView th:nth-child(2) {
+#addRecipeView th:nth-child(2),
+#ingredientEditor .recipeEditTable th:nth-child(2) {
     width: 30%;
 }
 
-#addRecipeView th:nth-child(3) {
+#addRecipeView th:nth-child(3),
+#ingredientEditor .recipeEditTable th:nth-child(3) {
     width: 12%;
 }
 
@@ -200,6 +203,7 @@ th {
     width: 10%;
 }
 
+/*todo: recipeEditTable is wrong here, it should be mealEditTable*/
 #mealEntryEditor th:first-child:not(.recipeEditTable),
 #mealEntryEditor th:nth-child(2):not(.recipeEditTable) {
     width: 30%;
@@ -251,26 +255,6 @@ th {
 }
 
 #ingredientEditor th:nth-child(4):not(.recipeEditTable) {
-    width: 28%;
-}
-
-#ingredientEditor .recipeEditTable th:first-child {
-    width: 25%
-}
-
-#ingredientEditor .recipeEditTable th:nth-child(2) {
-    width: 21%;
-}
-
-#ingredientEditor .recipeEditTable th:nth-child(3) {
-    width: 12%;
-}
-
-#ingredientEditor .recipeEditTable th:nth-child(4) {
-    width: 14%;
-}
-
-#ingredientEditor .recipeEditTable th:nth-child(5) {
     width: 28%;
 }
 
